src/codegen/snapshots/simpl__codegen__test__compile_ops-2.snap
---
source: src/codegen/test.rs
expression: module.print_to_string().to_string()
---
; ModuleID = 'test_compile'
source_filename = "test_compile"

define i64 @toplevel() {
toplevel_entry:
  ret i64 3
}

